src/scss/phy/icons.scss
@import "../common/icons";

.icon-help {
  display: inline-block;
  width: 19px;
  min-width: 19px;
  height: 22px;
  background: url(/assets/phy/ru.png) -308px -324px no-repeat;
  margin-bottom: -4px;
  margin-left: 8px;
  margin-right: 8px;
}
.icon-person-active {
  float: left;
  width: 9px;
  min-width: 9px;
  height: 14px;
  background: url(/assets/phy/ru.png) -296px -302px no-repeat;
  margin: 3px 10px 0 0;
}
.icon-group-table-person {
  float: left;
  width: 11px;
  min-width: 11px;
  height: 18px;
  background: url(/assets/phy/ru.png) -357px -320px no-repeat;
  margin: 8px 10px 0 0;
}
.icon-status {
  width: 46px;
  height: 46px;
  margin-top: -1px;
}

.icon-correct {
  @include svg-icon-raw('/assets/phy/icons/redesign/status-correct.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-attempted {
  @include svg-icon-raw('/assets/phy/icons/redesign/status-attempted.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-incorrect {
  @include svg-icon-raw('/assets/phy/icons/redesign/status-incorrect.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-in-progress {
  @include svg-icon-raw('/assets/phy/icons/redesign/status-in-progress.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-not-started {
  @include svg-icon-raw('/assets/phy/icons/redesign/status-not-started.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-not-attempted {
  // only for assignment progress – prefer icon-not-started for questions
  @include svg-icon-raw('/assets/phy/icons/redesign/status-not-attempted.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-new-tab {
  @include svg-icon('/assets/common/icons/new-tab.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-bin {
  @include svg-icon('/assets/common/icons/bin.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-initials {
  // background hex
  @include svg-color(url("/assets/phy/icons/redesign/hexagon.svg"), var(--color-brand-400), 28px, 28px, 100%);
  opacity: 0.2;
  // initials text
  + * {
    position: absolute;
    font-size: 12px;
  }
}

.icon-menu {
  @include svg-icon('/assets/phy/icons/redesign/menu.svg', 16px, 16px, 14px 12px);
}


.icon-cog {
  @include svg-icon('/assets/phy/icons/redesign/cog.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-hexagon {
  @include svg-icon('/assets/phy/icons/redesign/hexagon.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-hexagon-bullet {
  --mask-size: 75%;
  @extend .icon-hexagon;
}

.icon-my-isaac {
  @include svg-icon('/assets/phy/icons/redesign/my-isaac.svg', 28px, 28px);
}

.icon-search {
  @include svg-icon('/assets/phy/icons/redesign/search.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-flag {
  @include svg-icon('/assets/phy/icons/redesign/flag.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-print {
  @include svg-icon('/assets/phy/icons/redesign/print.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-share {
  @include svg-icon('/assets/phy/icons/redesign/share.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-refresh {
  @include svg-icon('/assets/phy/icons/redesign/refresh.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-sidebar {
  @include svg-icon('/assets/phy/icons/redesign/sidebar.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}

.icon-arrow-down {
  @include svg-icon('/assets/common/icons/arrow-right.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
  transform: rotate(90deg);
}

.icon-plus {
  @include svg-icon('/assets/phy/icons/redesign/plus.svg', 12px, 12px, 100%);
}

.icon-warning {
  @include svg-icon('/assets/phy/icons/redesign/warning.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
}


.icon-question {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-question-fg.svg',
    '/assets/phy/icons/redesign/page-question-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%)
  );
}

// "-thick" icons have a thicker internal stroke (and are shaped slightly differently to account); intended for use at small sizes (e.g. inline)
.icon-question-thick {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-question-thick-fg.svg', 
    '/assets/phy/icons/redesign/page-question-thick-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%)
  );
}

.icon-concept {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-concept-fg.svg', 
    '/assets/phy/icons/redesign/page-concept-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 55%), center 55%
    // the SVGs are correct, but visually top-heavy; the offset here shifts them down a little for better balance
  );
}

.icon-concept-thick {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-concept-thick-fg.svg', 
    '/assets/phy/icons/redesign/page-concept-thick-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 55%), center 55%
  );
}

.icon-generic {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-generic-fg.svg', 
    '/assets/phy/icons/redesign/page-generic-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%), 52% center
  );
}

.icon-question-deck {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-question-deck-fg.svg',
    '/assets/phy/icons/redesign/page-question-deck-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%), center 45%
  );
}

.icon-finder {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-finder-fg.svg', 
    '/assets/phy/icons/redesign/page-finder-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 57%)
  );
}

.icon-tests {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-tests-fg.svg', 
    '/assets/phy/icons/redesign/page-tests-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%)
  );
}

.icon-quiz {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-quiz-fg.svg', 
    '/assets/phy/icons/redesign/page-quiz-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 57%)
  );
}

.icon-revision {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-revision-fg.svg', 
    '/assets/phy/icons/redesign/page-revision-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%)
  );
}

.icon-info {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/info-fg.svg',
    '/assets/phy/icons/redesign/info-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 50%)
  );
}

.icon-events {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-event-fg.svg',
    '/assets/phy/icons/redesign/page-event-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 52%)
  );
}

.icon-contact {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-contact-fg.svg', 
    '/assets/phy/icons/redesign/page-contact-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%), 58% 53%
  );
}

.icon-group {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-group-fg.svg', 
    '/assets/phy/icons/redesign/page-group-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 65%)
  );
}

.icon-account {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-account-fg.svg',
    '/assets/phy/icons/redesign/page-account-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 63%)
);
}

.icon-progress {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-progress-fg.svg',
    '/assets/phy/icons/redesign/page-progress-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 58%), 52% center
  );
}

.icon-news {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-news-fg.svg', 
    '/assets/phy/icons/redesign/page-news-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%)
  );
}

.icon-error {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-error-fg.svg', 
    '/assets/phy/icons/redesign/page-error-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 60%), center 43%
  );
}

.icon-mail {
  @include svg-icon(
    '/assets/phy/icons/redesign/page-mail.svg', 
    var(--icon-size), var(--icon-size), var(--mask-size, 60%), center 55%
  );
}

.icon-book {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-book-fg.svg',
    '/assets/phy/icons/redesign/page-book-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 58%)
  )
}

.icon-my-bookmarks {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-bookmarks-fg.svg',
    '/assets/phy/icons/redesign/page-bookmarks-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 58%)
  );
}

.icon-wildcard {
  @include svg-icon-layered(
    '/assets/phy/icons/redesign/page-revision-fg.svg',
    '/assets/phy/icons/redesign/page-generic-bg.svg',
    var(--icon-size), var(--icon-size), var(--mask-size, 58%)
  );

  // Reusing layers from other icons so this needs slight adjustments to fit
  &::after {
    scale: 0.9;
  }
}

svg {
  &.almost-fill {
    fill: $phy_extra_force_yellow;
  }

  &.correct-fill {
    fill: $phy_green;
  }
}

.phy-hex-icon {
  // this is essentially an .icon, but needs different colouring; override size as needed with icon-lg, icon-xl, etc.
  @include svg-color(url("/assets/phy/icons/redesign/hexagon.svg"), var(--subject-color-200), var(--icon-size, 75px), var(--icon-size, 75px), 100%);
  position: absolute;
}

// Overrides -- ONLY use these on an individual basis to override an active theme.
// Setting `data-bs-theme` on a parent element is the much preferred approach.

// These are !important by the same logic as Bootstrap classes; if you have specified this as an explicit classname, you want it to take precedence.

// the default icon colour for `neutral` is var(--color-theme-500) (green), but we use black icons in a few places across e.g. navigation

$icon-color-themes: (
  "black": var(--color-neutral-900),
  "grey": var(--color-neutral-500),
  "muted": var(--color-neutral-300),
  "disabled": var(--color-neutral-200),
  "white": var(--color-neutral-white),
  "theme": var(--subject-color-500),
  "alert": var(--bs-alert-color),
);

@each $name, $color in $icon-color-themes {
  .icon-color-#{$name} {
    @include icon-color-override($color);
  }

  .icon-color-#{$name}-hoverable {
    // replaces the color when *not* hovering; resets to white (or any -on-hover override) when hovering
    --buttons-light-icon: #{$color};
  }

  .icon-color-#{$name}-on-hover {
    // replaces the color when hovering
    --icon-hover: #{$color};
  }
}

